--- a/ApiTesterV01/appsettings.json
+++ b/ApiTesterV01/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "APITesterConnection": "Server=.;DataBase=APITester;Integrated Security=True"
   },
+  "TokenKey": "THIS OK ABCD OL TEST AND AERIFY AND AAKENS, REPLACE IT WITH YOUR KYE SECRET, IT CAN BE ANY STRING",
+  "TokenTimeOut": "2",
+  "RefreshTokenTimeOut": "15",
   "AllowedHosts": "*"
 }
